not_in_use/thehoytwire/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thehoytwire-ingress
  namespace: thehoytwire
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.thehoytwire.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thehoytwire
            port:
              number: 80
  - host: thehoytwire.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thehoytwire
            port:
              number: 80
